[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/fonts/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/KleintenDynFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/menu/Settings/settings_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0.415686, 0.415686, 0.415686, 1 )
border_width_right = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0.886275, 0.298039, 0.0117647, 1 )
border_blend = true

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_hover = Color( 1, 0.8, 0.109804, 1 )
Button/colors/font_color_pressed = Color( 0.886275, 0.298039, 0.0117647, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 7 )
Label/styles/normal = null
TabContainer/colors/font_color_bg = Color( 1, 1, 1, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 1, 1, 1, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 0
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = SubResource( 10 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = SubResource( 8 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 9 )
Tabs/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
Tabs/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Tabs/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
Tabs/constants/hseparation = 4
Tabs/constants/label_valign_bg = 2
Tabs/constants/label_valign_fg = 0
Tabs/constants/top_margin = 24
Tabs/fonts/font = SubResource( 10 )
Tabs/icons/close = null
Tabs/icons/decrement = null
Tabs/icons/decrement_highlight = null
Tabs/icons/increment = null
Tabs/icons/increment_highlight = null
Tabs/styles/button = null
Tabs/styles/button_pressed = null
Tabs/styles/panel = null
Tabs/styles/tab_bg = null
Tabs/styles/tab_disabled = null
Tabs/styles/tab_fg = null

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.156863, 0.14902, 0.14902, 1 )

[node name="SettingsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -295.0
margin_right = 461.0
margin_bottom = 294.0
theme = SubResource( 11 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 174.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="GameplaySettings" type="GridContainer" parent="MarginContainer3"]
margin_left = 25.0
margin_top = 25.0
margin_right = 896.0
margin_bottom = 390.0
custom_constants/vseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fov" type="Label" parent="MarginContainer3/GameplaySettings"]
margin_right = 263.0
margin_bottom = 36.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "FOV"

[node name="FovOption" type="HBoxContainer" parent="MarginContainer3/GameplaySettings"]
margin_left = 423.0
margin_right = 871.0
margin_bottom = 36.0
size_flags_horizontal = 10
custom_constants/separation = 10

[node name="FovAmount" type="Label" parent="MarginContainer3/GameplaySettings/FovOption"]
margin_right = 38.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "70"

[node name="FovSlider" type="HSlider" parent="MarginContainer3/GameplaySettings/FovOption"]
margin_left = 48.0
margin_right = 448.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
value = 70.0
rounded = true

[node name="MouseSens" type="Label" parent="MarginContainer3/GameplaySettings"]
margin_top = 56.0
margin_right = 263.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "Mouse Sensitvity"

[node name="MouseSensOption" type="HBoxContainer" parent="MarginContainer3/GameplaySettings"]
margin_left = 432.0
margin_top = 56.0
margin_right = 871.0
margin_bottom = 92.0
size_flags_horizontal = 10
custom_constants/separation = 10

[node name="MouseSensAmount" type="Label" parent="MarginContainer3/GameplaySettings/MouseSensOption"]
margin_right = 29.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = ".1"

[node name="MouseSlider" type="HSlider" parent="MarginContainer3/GameplaySettings/MouseSensOption"]
margin_left = 39.0
margin_right = 439.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.05
max_value = 1.0
step = 0.01
value = 0.1

[node name="MouseSens2" type="Label" parent="MarginContainer3/GameplaySettings"]
margin_top = 112.0
margin_right = 263.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 2 )
text = "Master Volume"

[node name="Volume" type="HBoxContainer" parent="MarginContainer3/GameplaySettings"]
margin_left = 432.0
margin_top = 112.0
margin_right = 871.0
margin_bottom = 148.0
size_flags_horizontal = 10
custom_constants/separation = 10

[node name="Volume2" type="Label" parent="MarginContainer3/GameplaySettings/Volume"]
margin_right = 29.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = ".1"

[node name="Volume" type="HSlider" parent="MarginContainer3/GameplaySettings/Volume"]
margin_left = 39.0
margin_right = 439.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.05
max_value = 1.0
step = 0.01
value = 0.1

[node name="Button" type="Button" parent="MarginContainer3/GameplaySettings"]
margin_top = 168.0
margin_right = 263.0
margin_bottom = 204.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0

[node name="Button2" type="Button" parent="MarginContainer3/GameplaySettings"]
margin_left = 267.0
margin_top = 168.0
margin_right = 871.0
margin_bottom = 204.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0

[node name="Button3" type="Button" parent="MarginContainer3/GameplaySettings"]
margin_top = 224.0
margin_right = 263.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0

[node name="Button4" type="Button" parent="MarginContainer3/GameplaySettings"]
margin_left = 267.0
margin_top = 224.0
margin_right = 871.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0

[node name="Button5" type="Button" parent="MarginContainer3/GameplaySettings"]
margin_top = 280.0
margin_right = 263.0
margin_bottom = 316.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 12 )
action_mode = 0
text = "OK"

[connection signal="value_changed" from="MarginContainer3/GameplaySettings/FovOption/FovSlider" to="." method="_on_FovSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer3/GameplaySettings/MouseSensOption/MouseSlider" to="." method="_on_MouseSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer3/GameplaySettings/Volume/Volume" to="." method="_on_MasterSlider_value_changed"]
[connection signal="pressed" from="MarginContainer3/GameplaySettings/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer3/GameplaySettings/Button2" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer3/GameplaySettings/Button3" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer3/GameplaySettings/Button4" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer3/GameplaySettings/Button5" to="." method="_on_Button_pressed"]
